Make map appear disabled during api call; lower z-index of map controls to prevent overlap of sidenav

--- a/public/css/weather.css
+++ b/public/css/weather.css
@@ -280,3 +280,12 @@ a.wahay:hover {
         width: 100%;
     }
 }
+
+.map-disabled {
+    opacity: .3;
+}
+
+.leaflet-top,
+.leaflet-bottom {
+    z-index: 500;
+}
